# sdk-roark-analytics-python-livekit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude.yml  release.yml
examples/: .env.example  README.md  agent.py  observe_agent.py  pyproject.toml  track_agent.py
src/roark_analytics_python_livekit/: __init__.py  _recorder.py  _types.py  audio.py  client.py  session.py
tests/: test_audio.py  test_client.py  test_recorder.py  test_session.py
