[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roark-analytics-python-livekit"
version = "0.1.0"
description = "Roark analytics integration for LiveKit Agents — capture call lifecycle, transcripts, tool calls, metrics, and stereo recordings from any LiveKit Agents session."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Roark", email = "support@roark.ai" }]
keywords = ["livekit", "voice-ai", "observability", "roark", "analytics", "agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  # livekit-agents is required at runtime — the helpers wrap AgentSession/JobContext from
  # this package. Pinned to the GA 1.x line which stabilised the AgentSession event API
  # (conversation_item_added, function_tools_executed, metrics_collected).
  "livekit-agents>=1.0,<2",
  # httpx for the Roark webhook + presigned-upload calls. Async-native, supports connection
  # pooling, and matches LiveKit Agents' own async runtime.
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
]
examples = [
  "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://roark.ai"
Documentation = "https://docs.roark.ai/integrations/livekit"
Repository = "https://github.com/roarkhq/sdk-roark-analytics-python-livekit"
Issues = "https://github.com/roarkhq/sdk-roark-analytics-python-livekit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/roark_analytics_python_livekit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
